use of group by and order by

--- a/london_crime_report/code/London Crime Report.ipynb
+++ b/london_crime_report/code/London Crime Report.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,10 +375,159 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------+\n",
+      "|             borough| count|\n",
+      "+--------------------+------+\n",
+      "|             Croydon|602100|\n",
+      "|          Wandsworth|498636|\n",
+      "|              Bexley|385668|\n",
+      "|             Lambeth|519048|\n",
+      "|Barking and Dagenham|311040|\n",
+      "+--------------------+------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "borough_crime_count = data.groupBy('borough').count().show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+-----------+\n",
+      "|             borough|convictions|\n",
+      "+--------------------+-----------+\n",
+      "|             Croydon|   260294.0|\n",
+      "|          Wandsworth|   204741.0|\n",
+      "|              Bexley|   114136.0|\n",
+      "|             Lambeth|   292178.0|\n",
+      "|Barking and Dagenham|   149447.0|\n",
+      "+--------------------+-----------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "borough_conviction_sum= data.groupBy('borough').agg({\"value\":\"sum\"})\\\n",
+    "                        .withColumnRenamed(\"sum(value)\",\"convictions\")\n",
+    "\n",
+    "borough_conviction_sum.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+\n",
+      "|sum(convictions)|\n",
+      "+----------------+\n",
+      "|       6447758.0|\n",
+      "+----------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_borough_convictions = borough_conviction_sum.agg({\"convictions\":\"sum\"})\n",
+    "\n",
+    "total_borough_convictions.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_convictions = total_borough_convictions.collect()[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6447758.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(total_convictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyspark.sql.functions as func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "borough_percentage_contribution = borough_conviction_sum.withColumn(\"% contribution\", \n",
+    "                                                                    func.round(borough_conviction_sum[\"convictions\"] /total_convictions * 100,2 ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- borough: string (nullable = true)\n",
+      " |-- convictions: double (nullable = true)\n",
+      " |-- % contribution: double (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "borough_percentage_contribution.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "borough_percentage_contribution.orderBy(borough_percentage_contribution[2]).de"
+   ]
   }
  ],
  "metadata": {
